Closure_31/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_31_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:build/lib/*:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java:1017: error: processAMDAndCommonJSModules() has private access in Compiler
      compiler0.processAMDAndCommonJSModules();
               ^
Note: /home/liumengjiao/Desktop/CI/Evosuite/Closure_31/Closure/evosuite/3/com/google/javascript/jscomp/Compiler_ESTest.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
